Project

General

Profile

Actions

Bug #8599

closed

Fix check of ruleset id on pool update

Added by Loïc Dachary almost 10 years ago. Updated almost 10 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
Monitor
Target version:
-
% Done:

80%

Source:
Development
Tags:
Backport:
emperor dumpling firefly
Regression:
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Workaround

Use the rule_id instead of the ruleset. The rule_id for a given ruleset can be found with:

$ ceph osd crush rule dump
...
    { "rule_id": 4,
      "rule_name": "fastrgw",
      "ruleset": 50,
      "type": 1,
...

Description

ceph osd pool set data crush_ruleset 50* was using CrushWrapper::rule_exists, which checks for a rule existing, whereas the value being set is a ruleset.

Fixed by J. Spray on firefly

related mail thread


Related issues 1 (0 open1 closed)

Related to Ceph - Bug #8601: erasure-code: default profile does not exist after upgradeResolvedLoïc Dachary06/15/2014

Actions
Actions #1

Updated by Loïc Dachary almost 10 years ago

  • Description updated (diff)
Actions #2

Updated by Loïc Dachary almost 10 years ago

  • Description updated (diff)
Actions #3

Updated by Loïc Dachary almost 10 years ago

  • Status changed from 12 to Fix Under Review
  • % Done changed from 0 to 70

The individual commits fixing this in master cannot be conveniently cherry-picked because the CrushWrapper::ruleset_exist implementation is part of a larger patch that implements something that is not related to this issue.

firefly backport

Actions #4

Updated by Loïc Dachary almost 10 years ago

  • % Done changed from 70 to 80
Actions #5

Updated by Sage Weil almost 10 years ago

  • Status changed from Fix Under Review to Resolved
  • Source changed from other to Development
Actions

Also available in: Atom PDF